--- a/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/srcs/requirements/mariadb/conf/50-server.cnf
@@ -1,12 +1,17 @@
-[server]
-[mysql]
-user 			= mysql
-pid-file 		= /run/mysql/mysqld.pid
-socket 			= /run/mysql/mysqld.sock
-port 			= 3306
-basedir 		= /usr
-datadir 		= /var/lib/mysql
-tmpdir 			= /tmp
-lc-messages-dir	= /usr/shar/mysql
-
+[mysqld]
+pid-file		= /run/mysqld/mysqld.pid
+socket			= /run/mysqld/mysqld.sock
+port			= 3306
+basedir		= /usr
+datadir		= /var/lib/mysql
+tmpdir			= /tmp
+# lc-messages-dir	= /usr/share/mysql # Usually not needed
 bind-address	= 0.0.0.0
+
+# The [mysql] section is for the mysql command-line client.
+[mysql]
+# No specific client options needed for now.
+
+# The [client] section is for all client applications.
+[client]
+socket			= /run/mysqld/mysqld.sock
