Updated file structure

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -25,18 +25,25 @@ services:
     networks:
       - inception_network
     environment:
-      - WORDPRESS_DB_NAME=wordpress
-      - WORDPRESS_DB_USER=wpuser
-      - WORDPRESS_DB_PASSWORD=wppassword
-      - WORDPRESS_DB_HOST=mariadb
-      - WORDPRESS_AUTH_KEY=uniquestring1
-      - WORDPRESS_SECURE_AUTH_KEY=uniquestring2
-      - WORDPRESS_LOGGED_IN_KEY=uniquestring3
-      - WORDPRESS_NONCE_KEY=uniquestring4
-      - WORDPRESS_AUTH_SALT=uniquestring5
-      - WORDPRESS_SECURE_AUTH_SALT=uniquestring6
-      - WORDPRESS_LOGGED_IN_SALT=uniquestring7
-      - WORDPRESS_NONCE_SALT=uniquestring8
+      - WORDPRESS_DB_NAME=${WORDPRESS_DB_NAME}
+      - WORDPRESS_DB_USER=${WORDPRESS_DB_USER}
+      - WORDPRESS_DB_PASSWORD=${WORDPRESS_DB_PASSWORD}
+      - WORDPRESS_DB_HOST=${WORDPRESS_DB_HOST}
+      - WORDPRESS_AUTH_KEY=${WORDPRESS_AUTH_KEY}
+      - WORDPRESS_SECURE_AUTH_KEY=${WORDPRESS_SECURE_AUTH_KEY}
+      - WORDPRESS_LOGGED_IN_KEY=${WORDPRESS_LOGGED_IN_KEY}
+      - WORDPRESS_NONCE_KEY=${WORDPRESS_NONCE_KEY}
+      - WORDPRESS_AUTH_SALT=${WORDPRESS_AUTH_SALT}
+      - WORDPRESS_SECURE_AUTH_SALT=${WORDPRESS_SECURE_AUTH_SALT}
+      - WORDPRESS_LOGGED_IN_SALT=${WORDPRESS_LOGGED_IN_SALT}
+      - WORDPRESS_NONCE_SALT=${WORDPRESS_NONCE_SALT}
+      - DOMAIN_NAME=${DOMAIN_NAME}
+      - WP_ADMIN_USER=${WP_ADMIN_USER}
+      - WP_ADMIN_PASSWORD=${WP_ADMIN_PASSWORD}
+      - WP_ADMIN_EMAIL=${WP_ADMIN_EMAIL}
+      - WP_REGULAR_USER=${WP_REGULAR_USER}
+      - WP_REGULAR_PASSWORD=${WP_REGULAR_PASSWORD}
+      - WP_REGULAR_EMAIL=${WP_REGULAR_EMAIL}
 
   mariadb:
     build:
