--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,7 +3,7 @@ FROM debian:bullseye
 RUN apt update && apt upgrade -y && apt install -y mariadb-server
 
 COPY mariadb/conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
-COPY tools/mariadb_setup.sh /usr/local/bin/mariadb_setup.sh
+COPY mariadb/tools/mariadb_setup.sh /usr/local/bin/mariadb_setup.sh
 RUN chmod +x /usr/local/bin/mariadb_setup.sh
 
 EXPOSE 3306
