--- a/srcs/.env.template
+++ b/srcs/.env.template
@@ -13,6 +13,16 @@ WORDPRESS_DB_USER=<WORDPRESS_DB_USER>
 WORDPRESS_DB_PASSWORD=<WORDPRESS_DB_PASSWORD>
 WORDPRESS_DB_NAME=wordpress
 
+# WordPress authentication keys and salts
+WORDPRESS_AUTH_KEY=<WORDPRESS_AUTH_KEY>
+WORDPRESS_SECURE_AUTH_KEY=<WORDPRESS_SECURE_AUTH_KEY>
+WORDPRESS_LOGGED_IN_KEY=<WORDPRESS_LOGGED_IN_KEY>
+WORDPRESS_NONCE_KEY=<WORDPRESS_NONCE_KEY>
+WORDPRESS_AUTH_SALT=<WORDPRESS_AUTH_SALT>
+WORDPRESS_SECURE_AUTH_SALT=<WORDPRESS_SECURE_AUTH_SALT>
+WORDPRESS_LOGGED_IN_SALT=<WORDPRESS_LOGGED_IN_SALT>
+WORDPRESS_NONCE_SALT=<WORDPRESS_NONCE_SALT>
+
 # WordPress admin credentials
 WP_ADMIN_USER=<WP_ADMIN_USER>
 WP_ADMIN_PASSWORD=<WP_ADMIN_PASSWORD>
